fix: update DossierServiceTest to use findByUserWithVehicle